Remove deprecated files and update .gitignore to exclude unnecessary directories and files. Deleted adcs.py, configuration.py, landmarks.py, nav.py, nominal.py, touchandgo.py, ukf.py, waypoint.py, and several documentation files to streamline the codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 _VizFiles/
-commode/
-commode_actiate.txt
-Results.pdf
-Recording 2025-04-10 160914.mp4
+Videos/
+_pycache/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pyw
+*.pyz
+*.pywz
+*.pyzw
